Fixed Upload cancel and FileProgress name word wrapping.

--- a/public/Resources/less/upload/upload.less
+++ b/public/Resources/less/upload/upload.less
@@ -25,6 +25,7 @@
 			& > .file-progress-name {
 				display: table-cell;
 				text-align: left;
+				white-space: nowrap;
 			}
 
 			& > .file-progress-bar {
